--- a/dbmvtx9180/cfg/dbmvtx9180.conf
+++ b/dbmvtx9180/cfg/dbmvtx9180.conf
@@ -2,14 +2,13 @@
 #
 # This file contains the names of kernel modules that should be loaded
 # at boot time, one per line. Lines beginning with "#" are ignored.
-
-i2c_dev
+i2c-dev
 at24
 i2c-i801
 i2c-isch
 i2c-ismt
-i2c-dev
 i2c-mux
 i2c-smbus
 i2c-mux-gpio
 i2c-mux-pca954x
+optoe
